2004-04-02  Todd Berman  <tberman@sevenl.net>

	* Commands/RunCommands.cs:
	* Commands/FileCommands.cs:
	* Gui/Pads/ProjectBrowser/NodeBuilder/DefaultDotNetNodeBuilder.cs:
	* Internal/ExternalTool/ExternalTool.cs:
	* Internal/ExternalTool/ToolLoader.cs:
	* Internal/Project/Project/Deployment/FileDeploy.cs:
	* Internal/Project/Project/Deployment/AssemblyDeploy.cs:
	* Internal/Project/Project/Deployment/ScriptDeploy.cs:
	* Internal/Project/Project/IncludeFilesDialog.cs:
	* Internal/Project/Project/AbstractProject.cs:
	* Internal/Project/Combine/Combine.cs:
	* Internal/Project/Combine/CombineEntry.cs:
	* Internal/Templates/FileTemplate.cs:
	* Internal/Templates/CodeTemplateLoader.cs:
	* Internal/Templates/ProjectTemplates/CombineDescriptor.cs:
	* Internal/Templates/ProjectTemplates/ProjectDescriptor.cs:
	gettextify, and actually COMPILE it before checking in this time...

2004-04-02  Todd Berman  <tberman@sevenl.net>

	* Commands/MenuItemBuilders.cs:
	* Commands/RunCommands.cs:
	* Commands/ClassBrowserCommands/ClassBrowserCommands.cs:
	* Commands/ProjectCommands.cs:
	* Commands/ProjectBrowserCommands/ResourceFolderNodeCommands.cs:
	* Commands/ProjectBrowserCommands/FolderNodeCommands.cs:
	* Commands/ProjectBrowserCommands/CombineNodeCommands.cs:
	* Commands/FileCommands.cs:
	* Commands/HelpCommands.cs:
	gettextify all of the in-use Commands/


2004-04-02  Todd Berman  <tberman@sevenl.net>

	* Gui/Dialogs/SharpDevelopAboutPanels.cs:
	* Gui/Dialogs/ProjectOptionsDialog.cs:
	* Gui/Dialogs/WordCountDialog.cs:
	* Gui/Dialogs/TreeViewOptions.cs:
	* Gui/Dialogs/OptionPanels/ProjectOptions/CompileFileProjectOptions.cs:
	* Gui/Dialogs/OptionPanels/ProjectOptions/GeneralProjectOptions.cs:
	* Gui/Dialogs/OptionPanels/ProjectOptions/DeployFileOptions.cs:
	* Gui/Dialogs/ReferenceDialog/SelectReferenceDialog.cs:
	* Gui/Dialogs/ReferenceDialog/AssemblyReferencePanel.cs:
	* Gui/Dialogs/ReferenceDialog/ProjectReferencePanel.cs:
	* Gui/Dialogs/ReferenceDialog/GacReferencePanel.cs: