@@ -1,5 +1,11 @@
 2004-04-02  Todd Berman  <tberman@sevenl.net>
 
+	* Gui/Pads/ProjectBrowser/BrowserNode/NamedFolderNode.cs:
+	* Gui/Pads/ProjectBrowser/NodeBuilder/DefaultDotNetNodeBuilder.cs:
+	phantom commit, no one saw this
+
+2004-04-02  Todd Berman  <tberman@sevenl.net>
+
 	* Commands/RunCommands.cs:
 	* Commands/FileCommands.cs:
 	* Gui/Pads/ProjectBrowser/NodeBuilder/DefaultDotNetNodeBuilder.cs:
